# football

./: .gitignore  pyproject.toml  setup.py
.cursor/rules/: cpp-boost-migration.mdc  cpp-core-guidelines.mdc  cpp-google-style.mdc  cpp-math-optimization.mdc  cpp-smart-pointers-refcounted.mdc  cpp-special-member-functions.mdc  cpp-standard-and-scope.mdc  modification-workflow.mdc
.cursor/skills/gfootball-engine-cpp-modernization/: SKILL.md
.cursor/skills/gfootball-engine-overview/: SKILL.md
gfootball/doc/: MODERNIZATION_PHASE3.md  frame_sync_protocol_and_config.md
gfootball/frame_sync/: __init__.py  client.py  client_async.py  config.py  presentation.py  protocol.py  run_e2e_test.py  server.py  server_async.py
gfootball/frame_sync/schema/: README.md  __init__.py  constants.yaml  generate_config.py
