# Google Research Football - PEP 517/518
# 构建仍由 setup.py 中的 CustomBuild 驱动（C++ 引擎通过 build_game_engine.sh 编译）
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfootball"
version = "2.10.3"
description = "Google Research Football - RL environment based on open-source game Gameplay Football"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Google LLC", email = "no-reply@google.com" }
]
urls = { Homepage = "https://github.com/google-research/football" }
keywords = ["gfootball", "reinforcement-learning", "python", "machine-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
  "pygame>=1.9.6",
  "opencv-python",
  "psutil",
  "numpy",
  "gym<=0.21.0",
  "absl-py",
  "wheel",
]

# 包列表、package_dir、ext_modules、cmdclass 仍由 setup.py 定义，此处仅做元数据与依赖
